--- a/presentation.org
+++ b/presentation.org
@@ -14,13 +14,25 @@ patat:
 :END:
 - Motivation
 - Quick intro for Idris
+- Few examples of linear types
 - Demo time? 
 - Conclusion
 * Motivation for linear types
   - Safely using mutable data structures
-  - Better control for performance
   - Enforce data flows
+  - Better control for performance
 * Quick intro for Idris
+** Simple example
+   #+begin_src idris
+     isSingleton : Bool -> Type
+     isSingleton True = Nat
+     isSingleton False = List Nat
+
+     giveMeNumber : (multiple : Bool) -> (isSingleton multiple)
+     giveMeNumber False = [2,2,2]
+     giveMeNumber True = 2
+   #+end_src
+** A step further
 #+begin_src idris
   goodPassword : String -> Type
   goodPassword s = length s `GTE` 12
@@ -64,7 +76,18 @@ patat:
            There are 0 uses of linear name city at:
            greetAudience city = "Hello Sydney"
    #+end_example
-** State machine
+** Operation flow
+   #+begin_src idris
+     fetchImage : (url : String) -> (1 _ : ((1 _ : Image) -> Image)) -> Image
+     cropImage : (1 _ : Image) -> Image
+     transposeImage : (1 _ : Image) -> Image
+
+     picture : (url : String) -> Image
+     picture url = fetchImage url $ \image =>
+       let croppedImage = cropImage image
+           transposedImage = transposeImage croppedImage
+       in transposedImage
+   #+end_src
 ** Cleaning resource
    #+begin_src idris
      openFile : (1 _ : String) -> IO FileHandle
