--- a/presentation.org
+++ b/presentation.org
@@ -28,9 +28,13 @@ patat:
 ** Motivation for linear types
   - Safely using mutable data structures
   - Enforce data flows
+  - Safe resource usage
   - Better control for performance
 * Quick intro for Idris
 ** Simple example
+   Idris is strict dependently typed programming language
+   - Idris 1.3.3
+   - Idris2 0.3.0
    #+begin_src idris
      isSingleton : Bool -> Type
      isSingleton True = Nat
@@ -115,18 +119,16 @@ patat:
 ** Cleaning resource
    #+begin_src idris
      openFile : (1 _ : String) -> IO FileHandle
-
      -- (#) : a -> (1 _ : b) -> LPair a b
      read : (1 _ : FileHandle) -> IO (LPair String FileHandle)
-
      closeFile : (1 _ : FileHandle) -> IO ()
+     myBind : (1 _ : IO a) -> (1 _ : ((1 _ : a) -> IO b)) -> IO b
 
      seq : (1 _ : IO ()) -> IO String -> IO String
-
      utf8Decode : String -> String
 
      readFile : (1 _ : String) -> IO String
-     readFile filename = let (>>=) = bindL in do
+     readFile filename = let (>>=) = myBind in do
        file <- openFile filename
        (content # filehandler) <- read file
        closeFile filehandler `seq` pure (utf8Decode content)
@@ -145,16 +147,3 @@ patat:
   - Tweag blog, for example https://www.tweag.io/blog/2020-11-11-linear-dps/
   - A Tase of ATS talk https://www.youtube.com/watch?v=ADN6B1Wk5Ts
   - Linear Haskell: practical linearity in a higher-order polymorphic language https://arxiv.org/abs/1710.09756
-#+begin_comment
-* Motivation  
-- Fixing disconnect between the idea of the program with the code of the program
-- Currently used type systems don't have the ability express necessary ideas
-what to mention 
-- ghc 9.0 getting linear types
-- idris 2 getting linear types
-- Rust having affine types
-#+end_comment
-
-#+begin_comment
-One of the big fundamental problems in coding is identifying and controlling ownership. Who owns specific piece of data, who all can access it, who is responsible for it. And ideally we want to encode this information to types so that compiler can help check that our designs work correctly. Linear types are one possible way of combating this problem where one can mark in type level specific piece of data as something that has to be used exactly once. In this presentation I will be showing few short examples how this would look in practice using Idris 2, the upcoming next major version of Idris with support for linear types.
-#+end_comment
